core: Define colorimetry constants differently

This is to help the optimizer do the right thing. If a constant calls
Colorimetry::fromName(), the optimizer may not know that it must ensure
that colorimetry constants in colorspace.cpp are initialized first.

If the constants are exposed directly, then the compiler should have
enough of context to optimize the code and not mess things up.

BUG: 499789