src/wayland/colormanagement_v1.cpp
@@ -100,8 +100,8 @@ void ColorManagerV1::wp_color_manager_v1_create_windows_scrgb(Resource *resource
         0,
         std::nullopt,
         std::nullopt,
-        Colorimetry::fromName(NamedColorimetry::BT2020),
-        Colorimetry::fromName(NamedColorimetry::BT709),
+        Colorimetry::BT2020,
+        Colorimetry::BT709,
     };
     new ImageDescriptionV1(resource->client(), image_description, resource->version(), scrgb);
 }
@@ -264,7 +264,7 @@ void ColorParametricCreatorV1::wp_image_description_creator_params_v1_create(Res
         referenceLuminance = m_transferFunctionLuminances->reference;
     }
     if (Colorimetry::isValid(m_colorimetry->red().toxy(), m_colorimetry->green().toxy(), m_colorimetry->blue().toxy(), m_colorimetry->white().toxy())) {
-        new ImageDescriptionV1(resource->client(), image_description, resource->version(), ColorDescription(*m_colorimetry, func, referenceLuminance, m_minMasteringLuminance.value_or(func.minLuminance), maxFrameAverageLuminance, maxHdrLuminance, m_masteringColorimetry, Colorimetry::fromName(NamedColorimetry::BT709)));
+        new ImageDescriptionV1(resource->client(), image_description, resource->version(), ColorDescription(*m_colorimetry, func, referenceLuminance, m_minMasteringLuminance.value_or(func.minLuminance), maxFrameAverageLuminance, maxHdrLuminance, m_masteringColorimetry, Colorimetry::BT709));
     } else {
         new ImageDescriptionV1(resource->client(), image_description, resource->version(), std::nullopt);
     }
@@ -307,34 +307,34 @@ void ColorParametricCreatorV1::wp_image_description_creator_params_v1_set_primar
     }
     switch (primaries) {
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_srgb:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::BT709);
+        m_colorimetry = Colorimetry::BT709;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_pal_m:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::PAL_M);
+        m_colorimetry = Colorimetry::PAL_M;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_pal:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::PAL);
+        m_colorimetry = Colorimetry::PAL;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_ntsc:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::NTSC);
+        m_colorimetry = Colorimetry::NTSC;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_generic_film:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::GenericFilm);
+        m_colorimetry = Colorimetry::GenericFilm;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_bt2020:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::BT2020);
+        m_colorimetry = Colorimetry::BT2020;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_cie1931_xyz:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::CIEXYZ);
+        m_colorimetry = Colorimetry::CIEXYZ;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_dci_p3:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::DCIP3);
+        m_colorimetry = Colorimetry::DCIP3;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_display_p3:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::DisplayP3);
+        m_colorimetry = Colorimetry::DisplayP3;
         return;
     case QtWaylandServer::wp_color_manager_v1::primaries::primaries_adobe_rgb:
-        m_colorimetry = Colorimetry::fromName(NamedColorimetry::AdobeRGB);
+        m_colorimetry = Colorimetry::AdobeRGB;
         return;
     default:
         wl_resource_post_error(resource->handle, error::error_invalid_primaries_named, "unsupported named primaries");
